WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300322
Broke Canary Builds with WebKitWebExtension
https://bugs.webkit.org/show_bug.cgi?id=300322
Summary
Broke Canary Builds with WebKitWebExtension
Jamie Murphy
Reported
2025-10-07 07:29:13 PDT
A few oversights were breaking the canary builds with the new WebKitWebExtension API, as seen on
https://build.webkit.org/#/builders/1420/builds/346
:
> /app/webkit/Source/WebKit/UIProcess/Extensions/gtk/WebExtensionGtk.cpp:142:64: error: cannot pass object of non-trivial type 'const WebCore::ResourceError' through variadic function; call will abort at runtime [-Wnon-pod-varargs] > 142 | RELEASE_LOG_ERROR(Extensions, "Error recorded: %s", error->platformError()); > | ^ > /app/webkit/Source/WebKit/UIProcess/Extensions/gtk/WebExtensionGtk.cpp:206:37: error: conflicting types for 'bestIcon' > 206 | RefPtr<WebCore::Icon> WebExtension::bestIcon(RefPtr<JSON::Object> icons, WebCore::FloatSize idealSize, const Function<void(Ref<API::Error>)>& reportError) > | ^ > /app/webkit/Source/WebKit/UIProcess/Extensions/WebExtension.h:288:27: note: previous declaration is here > 288 | RefPtr<WebCore::Icon> bestIcon(RefPtr<JSON::Object>, WebCore::FloatSize idealSize, NOESCAPE const Function<void(Ref<API::Error>)>&); > | ^ > 2 errors generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Jamie Murphy
Comment 1
2025-10-07 07:30:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51942
EWS
Comment 2
2025-10-07 08:25:57 PDT
Committed
301140@main
(5051fbcf276b): <
https://commits.webkit.org/301140@main
> Reviewed commits have been landed. Closing PR #51942 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug