Fix Canary Build for WebKitWebExtension https://bugs.webkit.org/show_bug.cgi?id=300322

Reviewed by NOBODY (OOPS!).

Use the localizedDescription in the error instead of the PlatformError itself, and add NOESCAPE to the bestIcon function

* Source/WebKit/UIProcess/Extensions/gtk/WebExtensionGtk.cpp:
(WebKit::WebExtension::recordError):
(WebKit::WebExtension::bestIcon):